--- a/src/StatelessFunctionalComponents/Game/Game.module.css
+++ b/src/StatelessFunctionalComponents/Game/Game.module.css
@@ -10,11 +10,20 @@
 .Grid {
   width: 20px;
   height: 20px;
-  /* background-color: rgb(41, 41, 41); */
   border: solid 1px black;
 }
 
 .Button {
   padding: 4px;
   margin: 4px 8px;
+}
+
+.Form {
+  display: inline;
+  padding: 4px;
+}
+
+.Form input {
+  padding: 2px;
+  padding-left: 4px;
 }
